--- a/response_time/templates/index.html
+++ b/response_time/templates/index.html
@@ -5,7 +5,8 @@
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <input type="file" name="myfile">
-            <button type="submit">Upload</button>
+            <br>
+            <button type="submit" class="my-3 btn btn-primary">Upload</button>
         </form>
 
         {% if context %}
