[style]Less padding on product desc div & add desc

--- a/response_time/templates/base.html
+++ b/response_time/templates/base.html
@@ -23,9 +23,9 @@
         </nav>
     </div>
     
-    <div class="p-5 bg-dark text-white">
+    <div class="px-5 py-3 bg-dark text-white">
         <h1>Nome do produto</h1>
-        <p>Descrição</p>
+        <p>Aplicação que verifica se um conjunto de tarefas de um sistema de tempo real é escalonável ou não.</p>
       </div>
 
     
