add product name

--- a/response_time/templates/base.html
+++ b/response_time/templates/base.html
@@ -24,7 +24,7 @@
     </div>
     
     <div class="px-5 py-3 bg-dark text-white">
-        <h1>Nome do produto</h1>
+        <h1>Response Time Analysis</h1>
         <p>Aplicação que verifica se um conjunto de tarefas de um sistema de tempo real é escalonável ou não.</p>
       </div>
 
